--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,10 @@
-node_modules
 **/node_modules
-*/build
+**/build
 **/dist
-.env
 **/.env
-*/.env
-note.txt
-test.ts
-test.js
-api/src/flatworks/utils/credentials.json
-api/src/flatworks/utils/token.json
-<<<<<<< HEAD
-<<<<<<< HEAD
+**/yarn.lock
 
-=======
-docker-compose.yml
-mongo
->>>>>>> api
-=======
-mongo
-docker-compose.yml
-.DS_Store
->>>>>>> api
-#cms/src/components
-#cms/src/kpi
-#cms/src/commit
-#api/src/proposal
-#api/src/flatworks
+# ignore database & certificates
+**/dbdata
+**/mongobackups
+**/certbot
